--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,37 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+/* TODO: change default to corporate & business */
+@plugin 'daisyui';
+@plugin '@tailwindcss/typography';
+
+html {
+    @apply overflow-x-hidden overflow-y-scroll transition-colors;
+    &[data-theme='dark'] {
+        @apply bg-neutral;
+    }
+}
+
+@custom-variant dark (&:is([data-theme="dark"] *));
+
+@theme {
+    --font-*: initial;
+    --font-sans: 'Fira Sans', sans-serif;
+    --font-mono: 'Fira Mono', monospace;
+}
+
+/*
+  The default border color has changed to `currentcolor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentcolor);
+  }
+}
